[package]
name = "tank-game"
version = "0.1.0"
authors = ["Jacob Hughes <j@distanthills.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = { version = "0.8.2", features = ["serde"] }
tokio = {version = "1.4", features = ["sync", "rt", "rt-multi-thread", "time"]}
parking_lot = "0.11"
warp = { version = "0.3", features = ["websocket"] }
tokio-tungstenite = "0.14"
futures = "0.3.13"
serde = {version = "1.0.124", features = ["derive"]}
rmp-serde = "0.15.4"
pathfinder_canvas = {version = "0.5.0", optional = true}
pathfinder_gl = {version = "0.5.0", optional = true}
pathfinder_renderer = {version = "0.5.0", optional = true}
pathfinder_resources = {version = "0.5.0", optional = true}
glutin = {version = "0.26", optional = true}
gl = {version = "0.14", optional = true}

[features]
server = []
client = ["pathfinder_canvas", "pathfinder_gl", "pathfinder_resources", "pathfinder_renderer", "glutin", "gl"]
default = ["server", "client"]
